# CheckerGameAI

./: AlphaBeta.cpp  AlphaBeta.h  AlphaBetaSearch.cpp  AlphaBetaSearch.h  CMakeLists.txt  Checker.cpp  Checker.h  CheckerTree.cpp  CheckerTree.h  GameTree.cpp  GameTree.h  MinMaxAB.cpp  MinMaxAB.h  Object.h  main.cpp
